--- a/loader/templates/post_form.html
+++ b/loader/templates/post_form.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Добавить пост</title>
-    <link rel="stylesheet" href="../../static/style.css">
+    <link rel="stylesheet" type="text/css" href="../../static/style.css">
 </head>
 <body>
 <main>
 
-    <a href="../../main/templates/index.html" class="link">Назад</a>
+    <a href="/" class="link">Назад</a>
 
     <h1>Добавить пост</h1>
 
-    <form action="post_uploaded.html" method="POST" enctype="multipart/form-data">
+    <form action="/upload" method="POST" enctype="multipart/form-data">
         <p>Картинка к посту</p>
         <div>
             <input type="file" name="picture">
@@ -24,6 +24,7 @@
 
         <div>
             <input type="submit" value="Добавить" class="button">
+
         </div>
     </form>
 
