--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -20,7 +20,7 @@
 
     <hr>
 
-    <a href="/" class="button">Добавить пост</a>
+    <a href="/post" class="button">Добавить пост</a>
 
 </main>
 </body>
