--- a/main/templates/post_list.html
+++ b/main/templates/post_list.html
@@ -17,7 +17,7 @@
             <p>{{ post.content }} </p>
         </div>
     {% endfor %}
-    <a href="/" class="button">Добавить пост</a>
+    <a href="/post" class="button">Добавить пост</a>
 
 </main>
 </body>
